Fix code-example overflow styles

--- a/docs/src/styles/_code-example.scss
+++ b/docs/src/styles/_code-example.scss
@@ -6,7 +6,6 @@
 
 .code-example {
   margin: 2rem 0 !important;
-  overflow: hidden;
   border: core.$border;
   border-radius: core.$border-radius;
   font-size: core.$font-size;
